fixed padding problem on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -315,7 +315,7 @@ textarea {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 50px;
+      padding-top: 20px;
       border-top: 1px solid #75c059;
 
     }
@@ -412,8 +412,8 @@ textarea {
  }
 
  .social-media {
-   margin-top: 50px;
-   padding-top: 150px;
+   margin-top: 20px;
+   margin-bottom: 350px;
    padding-left: 5px;
  }
 
